# own_vector_pq_tree_heap

./: 3_lab_interface.h  3_tests.h  BST.h  CMakeLists.txt  Error_Handler.h  Heap.h  definitions.h  dynamic_array.h  immutable_list.h  interface.h  interface_3_1.h  interface_4.h  list.h  main.cpp  main_menu.h  priority_queue&heap.h  priority_queue_and_heap.h  queue.h  sorting_algorithms.h  test_3_1.h  test_4.h  tests.h
