cmake_minimum_required(VERSION 3.27)
project(FINAL_LABA_2_FOR_SUBBMITTING)

set(CMAKE_CXX_STANDARD 23)

add_executable(FINAL_LABA_2_FOR_SUBBMITTING main.cpp
        queue.h
        priority_queue_and_heap.h
        3_lab_interface.h
        3_tests.h
        main_menu.h
        Error_Handler.h
        test_4.h
        interface_4.h
        BST.h
        Heap.h
        interface_3_1.h
        test_3_1.h
        tests.h
        sorting_algorithms.h
)
